samples/_failures_safe/1761546153_7ee277_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_85bed941.c: In function ‘parser_parse_expression’:
./samples/SAFE/__tmp_85bed941.c:181: error: expected ‘(’ at end of input
./samples/SAFE/__tmp_85bed941.c:180:9: error: expected declaration or statement at end of input
  180 |         if
      |         ^~
./samples/SAFE/__tmp_85bed941.c:180:9: error: expected declaration or statement at end of input
